--- a/tasks/tools.yaml
+++ b/tasks/tools.yaml
@@ -95,17 +95,8 @@ tasks:
       cd utilities && \
       wget https://github.com/guumaster/hostctl/releases/download/v$HOSTCTL/hostctl_${HOSTCTL}_windows_64-bit.zip && \
       unzip hostctl_${HOSTCTL}_windows_64-bit.zip && \
-      rm hostctl_${HOSTCTL}_windows_64-bit.zip LICENSE README.md{{end}}
-      {{if eq OS "darwin"}}
-      curl -LO https://github.com/guumaster/hostctl/releases/download/v$HOSTCTL/hostctl_${HOSTCTL}_darwin_64-bit.tar.gz && \
-      tar -xvf hostctl_${HOSTCTL}_darwin_64-bit.tar.gz && \
-      rm hostctl_${HOSTCTL}_darwin_64-bit.tar.gz LICENSE README.md && \
-      sudo mv hostctl /usr/local/bin{{end}}
-      {{if eq OS "linux"}}
-      curl -LO https://github.com/guumaster/hostctl/releases/download/v$HOSTCTL/hostctl_${HOSTCTL}_linux_64-bit.tar.gz && \
-      tar -xvf hostctl_${HOSTCTL}_linux_64-bit.tar.gz && \
-      rm hostctl_${HOSTCTL}_linux_64-bit.tar.gz LICENSE README.md && \
-      sudo mv hostctl /usr/local/bin{{end}}
+      rm hostctl_${HOSTCTL}_windows_64-bit.zip LICENSE README.md
+      {{else}}brew install guumaster/tap/hostctl && brew install hostctl{{end}}
 
   vault:
     cmds:
